Enhance display and spacing of fields

--- a/app/src/main/res/layout/content_details.xml
+++ b/app/src/main/res/layout/content_details.xml
@@ -33,7 +33,6 @@
             android:layout_marginTop="16dp"
             android:layout_toEndOf="@id/posterImageView"
             android:ellipsize="end"
-            android:maxLines="2"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/posterImageView"
@@ -54,7 +53,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/posterImageView"
-            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
+            app:layout_constraintTop_toBottomOf="@+id/releaseDateTextView"
             tools:text="Ação, Fantasia, Aventura, Ficção Científica" />
 
         <TextView
@@ -63,15 +62,15 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:layout_toEndOf="@id/posterImageView"
             android:ellipsize="end"
-            android:maxLines="2"
+            android:maxLines="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/posterImageView"
-            app:layout_constraintTop_toBottomOf="@+id/genresTextView"
+            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
             tools:text="25/6/1980" />
 
         <TextView
